# rusted_service

./: Cargo.toml  LICENSE  README.md
src/: args.rs  configs.rs  db.rs  main.rs  state.rs  web.rs
src/db/: users.rs
src/web/: app.rs  auth.rs  docs.rs  protected.rs
